REF: Un-nest CLI commands for asking questions
BREAKING CHANGE: Use:
- `octue twined question ask` instead of `octue twined question ask remote`
- `octue twined question ask-local` instead of `octue twined question ask local`

--- a/octue/twined/cloud/deployment/dockerfiles/Dockerfile-python310
+++ b/octue/twined/cloud/deployment/dockerfiles/Dockerfile-python310
@@ -36,4 +36,4 @@ RUN if [ -f "pyproject.toml" ]; then poetry install --only main;  \
 
 ENV USE_OCTUE_LOG_HANDLER=1
 ENV COMPUTE_PROVIDER=GOOGLE_KUEUE
-CMD ["octue", "twined", "question", "ask", "local"]
+CMD ["octue", "twined", "question", "ask-local"]
